--- a/config.json
+++ b/config.json
@@ -1,12 +1,13 @@
 {
-   "key":"sk-#########",
+   "key":"sk-##########",
    "instruction":"Act as a creative agent who generates a terse but highly creative image prompt derived from the prompt I send you.  Include descriptive visual elements of the subject, lighting and surroundings.  Specify {} as the artistic style at beginning of the sentence follwed by 'of', use descriptive elements that pertain to this artistic style.  Include no more than {} elements presented as discrete descriptors in one long sentence without story.  Put the most important descriptive elements at the beginning of the sentence. ",
    "example":"Female warrior dressed in animal skins, stormy skies, blood-smeared face, wild flowing hair, gripping a sharp spear",
    "style":[
-      "Abstract Painting",
+      "Abstract Expressionism",
       "Acrylic Painting",
       "Anime",
       "Art Deco",
+      "Biomorphic Abstraction",
       "Black and White Photograph",
       "Cartoon",
       "Charcoal Sketch",
@@ -20,6 +21,7 @@
       "Digital Art",
       "Fantasy Art",
       "Fashion Art",
+      "Fashion Sketch",
       "Fish-Eye lens Photograph",
       "Goth Art",
       "Graffiti",
@@ -29,6 +31,7 @@
       "Impressionist Painting",
       "Josei Anime",
       "Long Exposure Photograph",
+      "Low Key Photograph",
       "Macro Photograph",
       "Manga",
       "Metal Sculpture",
