--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ name = "plush-for-comfyui"
 version = "1.21.14"
 description = "A suite of nodes that includes:  - Prompt enhancers/generators that employ remote AI services and local front-ends like: ChatGPT, Anthropic Claude, Groq, LM Studio, Oobabooga, etc.  - An Image Generator that uses Dall_e 3.  - An image metadata extractor that extracts seed, prompt, cfg, size, denoise, etc from existing AI generated images and photo metadata (from exif data) from jpeg photographs.  A tagger that appends text (tags) to the beginning, end and/or middle of a text block.  Image and text multiplexer utili"
 authors = ["glibsonoran <31249593+glibsonoran@users.noreply.github.com>"]
-license = "GNU GENERAL PUBLIC LICENSE"
+license = { file = "LICENSE" }
 readme = "README.md"
 =======
 
